<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_classic"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addAbility_button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/buttons_classic"
            android:padding="5dp"
            android:text="@string/add_ability_or_spell_spellbook"
            android:textColor="@color/buttons_text_classic"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allSpells_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/allSpells_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttons_classic"
            android:padding="5dp"
            android:text="@string/all_spells_spellbook"
            android:textColor="@color/buttons_text_classic"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/addAbility_button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createdClasses_listView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createClass_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttons_classic"
            android:padding="5dp"
            android:text="@string/create_class_spellbook"
            android:textColor="@color/buttons_text_classic"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/createdClasses_listView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classNameCreation_editText" />

        <EditText
            android:id="@+id/classNameCreation_editText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/inputs_classic"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/create_class_name_spellbook"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/text_classic"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/createClass_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/createdClasses_listView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/inputs_classic"
            app:layout_constraintBottom_toTopOf="@+id/allSpells_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createClass_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>